Add correct Asts