@@ -14,7 +14,8 @@ public class GenerateAst {
         }
         String outputDir = args[0];
         try {
-            defineAst(outputDir, "Expr", List.of(
+            defineAst(outputDir, "Expr", Arrays.asList(
+                    "Assign   : Token name, Expr value",
                     "Binary   : Expr left, Token operator, Expr right",
                     "Grouping : Expr expression",
                     "Literal  : Object value",
